[package]
name = "omnibus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_01 = { path = "../day_01" }
day_02 = { path = "../day_02" }
day_03 = { version = "0.1.0", path = "../day_03" }
day_04 = { path = "../day_04" }
day_05 = { version = "0.1.0", path = "../day_05" }
day_06 = { version = "0.1.0", path = "../day_06" }
day_07 = { version = "0.1.0", path = "../day_07" }
day_08 = { version = "0.1.0", path = "../day_08" }
day_09 = { version = "0.1.0", path = "../day_09" }
day_10 = { version = "0.1.0", path = "../day_10" }
day_11 = { version = "0.1.0", path = "../day_11" }
day_12 = { version = "0.1.0", path = "../day_12" }
js-sys = { workspace = true }
prelude = { version = "0.1.0", path = "../prelude" }
serde-wasm-bindgen = "0.6.2"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
web-sys = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
